<resources>
    <string name="app_name">CustomRestaurant</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_option">Login</string>
    <string name="title_more">More</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mob_num">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration_checkbox_message"><![CDATA[Agree Terms & Conditions.]]></string>
    <string name="register">Create Account</string>
    <string name="first_name_empty_message">Please Enter Your First Name</string>
    <string name="last_name_empty_message">Please Enter Your Last Name</string>
    <string name="mob_num_empty_message">Please Enter Your Mob. Number.</string>
    <string name="email_empty_message">Please Enter Your Email</string>
    <string name="password_empty_message">Please Enter Your Password</string>
    <string name="confirm_password_empty_message">Please Enter This Field.</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_disabled">Dark mode disabled</string>
    <string name="dark_mode_enabled">Dark mode enabled</string>
    <!--    <string name="theme_key">THEME_LIGHT_DARK</string>-->
    <string name="theme_key">themedark</string>
    <string name="select_address">Select Address</string>
</resources>