<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/more_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.more.MoreFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:elevation="2dp"
            android:layout_marginVertical="@dimen/marginY">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/side_padding"
                android:layout_gravity="center"
                android:gravity="center_vertical">

            <TextView
                android:id="@+id/saved_addresses_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="24dp"
                android:drawableLeft="@drawable/ic_saved"
                android:drawablePadding="@dimen/side_padding"
                android:text="@string/saved_addresses" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:elevation="2dp"
            android:layout_marginBottom="@dimen/marginY">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/side_padding"
                android:layout_gravity="center"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/settings_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="24dp"
                    android:drawableLeft="@drawable/ic_settings"
                    android:drawablePadding="@dimen/side_padding"
                    android:text="@string/settings" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:elevation="2dp"
            android:layout_marginBottom="@dimen/marginY">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/side_padding"
                android:layout_gravity="center"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/privacy_policy_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="24dp"
                    android:drawableLeft="@drawable/ic_policy"
                    android:drawablePadding="@dimen/side_padding"
                    android:text="@string/privacy_policy" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:elevation="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/side_padding"
                android:layout_gravity="center"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/terms_and_conditions_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="24dp"
                    android:drawableLeft="@drawable/ic_tc"
                    android:drawablePadding="@dimen/side_padding"
                    android:text="@string/terms_conditions" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:elevation="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/side_padding"
                android:layout_gravity="center"
                android:gravity="center">

                <TextView
                    android:id="@+id/more_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="24dp"
                    android:drawablePadding="@dimen/side_padding"
                    android:drawableLeft="@drawable/ic_login"

                    android:text="@string/login_option" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>





    </LinearLayout>


</LinearLayout>